task 150. junior.pack2.p5.ch1.task2 v2 next() returns even value